<resources>


    <string name="title_activity_main2">Streamy</string>
    <string name="title_home">Home</string>
    <string name="title_building">My Building</string>
    <string name="title_series">Series</string>
    <string name="title_movies">Movies</string>
    <string name="title_profile">Profile</string>
    <string name="text_logout">Log Out</string>
    <string name="text_get_help">Get Help</string>
    <string name="image">image</string>
    <string name="favorite">Favorite</string>


    <!--On-boarding-->
    <string name="text_phone">Invalid phone number</string>
    <string name="text_required_field">This field is required</string>

    <!--Error messages-->
    <string name="network_error_msg">Please check if your Internet connection is OK and try again</string>
    <string name="unknown_error_msg">Something went wrong please try again</string>

    <string name="cancel">Cancel</string>
    <string name="logout">Log out</string>
    <string name="logout_message">Are you sure you want to logout?</string>


    <!-- Strings used for fragments for navigation -->

    <string name="no_active">No Active visits at the moment</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="movie_name">Movie Name</string>
    <string name="type">Type</string>
    <string name="year">Year</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>

    <string name="Trending">All Movies/Series Trending</string>
    <string name="Detail">Detail</string>
    <string name="Trailer">Play Trailer</string>
    <string name="Favorite">Favorite</string>
    <string name="Rating">Rating</string>
    <string name="Language">Language</string>
    <string name="Date">Release: </string>

</resources>