<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/baseline_cast_24"
        android:title="@string/title_series"
        android:iconTint="@color/white"/>
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/baseline_airplay_24"
        android:title="@string/title_movies"
        android:iconTint="@color/white"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorite"
        android:iconTint="@color/white"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/title_profile"
        android:iconTint="@color/white"/>

</menu>