<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            app:tabTextColor="#FFFFFF"
            app:tabSelectedTextColor="#B6E83D"
            app:tabIndicatorColor="#B6E83D">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/nowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/topRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabLayout" />

    </RelativeLayout>
</layout>
