<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="FavMovieEntity"
            type="com.movies.streamy.room.favorites.FavMovieEntity"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:paddingEnd="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/MovieName"
            style="@style/CustomTextStyle"
            android:text="@string/movie_name"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/textType"
            style="@style/CustomTextStyle"
            android:text="@string/type"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/MovieName" />


        <TextView
            android:id="@+id/Type"
            style="@style/CustomTextStyle"
            android:text="@string/type"
            app:layout_constraintStart_toEndOf="@id/textType"
            app:layout_constraintTop_toBottomOf="@+id/MovieName"

            />

        <TextView
            android:id="@+id/textYear"
            style="@style/CustomTextStyle"
            android:text="@string/Date"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/Type" />

        <TextView
            android:id="@+id/year"
            style="@style/CustomTextStyle"
            android:text="@string/Date"
            app:layout_constraintStart_toEndOf="@id/textYear"
            app:layout_constraintTop_toBottomOf="@id/Type"

            />

        <TextView
            android:id="@+id/textlanguage"
            style="@style/CustomTextStyle"
            android:text="@string/Language"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/language"
            style="@style/CustomTextStyle"
            android:text="@string/Language"
            app:layout_constraintStart_toEndOf="@id/textlanguage"
            app:layout_constraintTop_toBottomOf="@id/year" />


        <TextView
            android:id="@+id/textVote"
            style="@style/CustomTextStyle"
            android:text="@string/Rating"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/language" />


        <TextView
            android:id="@+id/Rating"
            style="@style/CustomTextStyle"
            android:text="@string/Rating"
            app:layout_constraintStart_toEndOf="@id/textVote"
            app:layout_constraintTop_toBottomOf="@+id/language" />

        <Button
            android:id="@+id/playTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="Trailer"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.894"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
